# citeloom

./: .dockerignore  .gitignore  LICENSE  PR_DESCRIPTION.md  README.md  check_zotero_schema.py  citeloom.toml  docker-compose.yml  fastmcp.json  linter.ini  pyproject.toml  pytest.ini
.cursor/rules/: specify-rules.mdc
.github/workflows/: ci.yml
.specify/memory/: constitution.md
docs/: conversion-artifact-storage-recommendations.md  docling-cpu-optimization.md  docling-performance-optimization.md  embedding-governance.md  environment-config.md  setup-guide.md  windowed-conversion-user-guide.md  windows-compatibility.md  zotero-annotations.md  zotero-fulltext-reuse.md  zotero-local-access.md
docs/adr/: 0001-toolchain-standard.md
docs/analysis/: CRITICAL_ISSUES_SUMMARY.md  README.md  docling-testing-plan.md  docling-use-case-testing-issues.md  implementation-summary.md  improvements-and-issues.md  local-vs-web-comparison.md  new-use-case-testing-issues.md  status-summary.md  subcollection-handling-verification.md  zotero-docling-testing-issues.md  zotero-improvement-roadmap.md  zotero-old-schema-fallback.md  zotero-strategy-testing.md  zotero-testing-plan.md  zotero-testing-summary.md  zotero-use-case-testing-issues.md
docs/branding/: naming-alternatives.md
references/: clean-arch.json
scripts/: validate_quickstart.py
specs/001-project-spec/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-chunk-retrieval/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-framework-implementation/: plan.md  (+5 more)
(+124 files in other folders)
