[project]
name = "citeloom"
version = "0.1.0"
description = "Weave long-form sources into small, citable context for your AI work."
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "docling>=2.59.0",
    "fastembed>=0.7.3",
    "mcp>=0.9.0",
    "pydantic>=2.12.3",
    "qdrant-client>=1.15.1",
    "rich>=14.2.0",
    "sentence-transformers>=5.1.2",
    "typer>=0.19.2",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
strict_optional = true
no_implicit_optional = true
check_untyped_defs = true
disallow_any_generics = true
warn_return_any = true

[tool.mypy-src.domain]
strict = true

[dependency-groups]
dev = [
    "import-linter>=2.5.2",
    "mypy>=1.18.2",
    "openai>=1.54.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.2",
]
docling = [
    # Optional dependency group for docling (document conversion/chunking)
    # Install with: uv sync --group docling
    # Note: Not available on Windows Python 3.12 (deepsearch-glm lacks Windows wheels)
    #       Windows users should use WSL or wait for Windows support
    "docling>=1.0.0",
]
